dim/spec/test_input/invalid_attributes/default_auto.dim
cluster:
  type: text
  default: 'auto'
necessary:
  type: single
  default: ''
  allowed:
    -
    - true
    - false
